# transformers-course

./: README.md  init_poetry.ipynb  pyproject.toml  requirements.txt
1-transformer-models/: 02_how_do_transformers_work.md  03_encoder_decoder_encoder-decoder_models.md
2-using-transformers/: 00_summary.md  01_behind_the_pipeline_pytorch.ipynb  02_models_pytorch.ipynb  03_tokenizers_pytorch.ipynb  04_handling_multiple_sequences_pytorch.ipynb  05_configure_tokenizer_pytorch.ipynb
3-fine-tuning-a-pretrained-model/: 01_processing_the_data_pytorch.ipynb  02_fine_tuning_a_model_with_the_Trainer_API_or_Keras.ipynb  03_a_full_training.ipynb
notebooks/: 01_transformers_what_can_they_do.ipynb  02_bias_and_limitations.ipynb
notes/: 02_encoder_decoder_encoder-decoder_models.md
